<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingStart="@dimen/common_padding"
        android:paddingTop="14dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="23dp"
        android:background="@color/blue"
        android:orientation="vertical"
        android:paddingStart="@dimen/common_padding"
        android:paddingEnd="@dimen/common_padding">

        <Button
            android:id="@+id/imageButtonSearch"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/padding_between_buttons"
            android:backgroundTint="@color/white"
            android:letterSpacing="0"
            android:text="@string/search"
            android:textAllCaps="false"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:onClick="onClick"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/padding_between_elements"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/imageButtonLibrary"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/padding_between_buttons"
            android:layout_marginBottom="@dimen/padding_between_buttons"
            android:backgroundTint="@color/white"
            android:letterSpacing="0"
            android:onClick="onClick"
            android:text="@string/library"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:textAllCaps="false"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/padding_between_elements"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/imageButtonSettings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/padding_between_buttons"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:letterSpacing="0"
            android:onClick="onClick"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/padding_between_elements"
            app:iconTint="@color/black" />
    </LinearLayout>

</LinearLayout>